fix(Sidebar): emit wrong size to siblings

--- a/scss/sidebar/_sidebar.scss
+++ b/scss/sidebar/_sidebar.scss
@@ -33,34 +33,32 @@
     border-color: rgba($black, .1);
   }
 
-  &.hide {
-    &:not(.sidebar-end){
-      @include ltr-rtl("margin-left", - $sidebar-width);
-      ~ * {
-        --#{$variable-prefix}sidebar-occupy-start: 0;
-      }
-    }
-    &.sidebar-end {
-      @include ltr-rtl("margin-right", - $sidebar-width);
-      ~ * {
-        --#{$variable-prefix}sidebar-occupy-end: 0;
-      }
-    }
-  }
+  // &.hide {
+  //   &:not(.sidebar-end){
+  //     @include ltr-rtl("margin-left", - $sidebar-width);
+  //     ~ * {
+  //       --#{$variable-prefix}sidebar-occupy-start: 0;
+  //     }
+  //   }
+  //   &.sidebar-end {
+  //     @include ltr-rtl("margin-right", - $sidebar-width);
+  //     ~ * {
+  //       --#{$variable-prefix}sidebar-occupy-end: 0;
+  //     }
+  //   }
+  // }
 
   @each $width, $value in $sidebar-widths {
     &.sidebar-#{$width} {
       flex: 0 0 $value;
       width: $value;
 
-      &:not(.sidebar-end).hide {
-        @include ltr-rtl("margin-left", - $value);
+      &:not(.sidebar-end) {
         ~ * {
           --#{$variable-prefix}sidebar-occupy-start: #{$value};
         }
       }
-      &.sidebar-end.hide {
-        @include ltr-rtl("margin-right", - $value);
+      &.sidebar-end {
         ~ * {
           --#{$variable-prefix}sidebar-occupy-end: #{$value};
         }
